<resources>
    <string name="app_name">Trip Monitor</string>
    <string name="facebook_application_id">386650181873461</string>
    <string name="fb_login_protocol_scheme">fb386650181873461</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">9b81bc459e974cbfc616606b372040d3</string>
    <string name="ak_login_protocol_scheme">ak386650181873461</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="add_post">Add entry</string>
    <string name="edit_post">Edit post</string>
    <string name="empty_post_message">Post is empty</string>
    <string name="title">title</string>
    <string name="body">body</string>
    <string name="title_activity_addedit_post">Add edit post</string>
    <string name="groups">groups</string>
    <string name="profile">profile</string>
    <string name="alarms">alarms</string>
    <string name="contact">contact</string>
    <string name="active_group">Active group</string>
    <string name="empty_trip_message">Fill your trip fields</string>
    <string name="name">name</string>
    <string name="date_from">date from</string>
    <string name="date_to">date to</string>
    <string name="edit_trip">edit trip</string>
    <string name="logout">logout</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="edit_user">Edit User</string>
    <string name="empty_user_message">User fields are empty</string>
    <string name="phone_number">phone</string>
    <string name="update_profile">Update Profile</string>
    <string name="title_activity_aa">aa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="drawer_open" />
    <string name="drawer_close" />
    <string name="add">Add</string>
    <string name="email">email</string>
    <string name="phone_or_email_android_text">Phone or e-mail</string>
    <string name="phone_or_email">Phone or e-mail</string>
    <string name="contacts">Contacts</string>
    <string name="date">Date</string>
    <string name="details">details</string>
    <string name="empty_alarms_message">No alarm to add</string>
    <string name="add_trip">Add trip</string>
</resources>
