<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="#000000"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintEnd_toStartOf="@+id/date_from"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/date_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date_from"
            android:textColor="#000000"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/name"
            app:layout_constraintEnd_toStartOf="@+id/date_to" />

        <TextView
            android:id="@+id/date_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/date_from"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:text="@string/date_to"
            android:textColor="#000000" />
    </android.support.constraint.ConstraintLayout>

</layout>
