<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMain">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="4dp"
            android:background="@color/colorMain"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color1"
            android:layout_below="@+id/name"
            android:text="@string/phone_number"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/email"

            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_below="@id/phone"
            android:background="@color/white"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="18sp"  />
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_below="@id/email"
            android:background="@android:color/black"/>
    </RelativeLayout>
</layout>
