<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/color3">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginTop="0dp"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/date"
            android:text="@string/date"
            android:layout_below="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/date"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/details"
            android:text="@string/details"
            android:background="@color/color1"
            android:layout_below="@id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/details"
            android:background="@android:color/black"/>

    </RelativeLayout>

</layout>
