<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color1">

            <TextView
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"

                android:textColor="#000000"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="@+id/delete_button"
                app:layout_constraintEnd_toStartOf="@+id/delete_button"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@android:drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/name"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>


        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/text_email"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/email" />


        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/phone_number" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/text_phone"
            android:textColor="#000000"
            android:textSize="18sp"
            android:text="@string/phone_number" />
    </RelativeLayout>
</layout>
