<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewmodel"
            type="com.example.herben.tripmonitor.ui.addTrip.AddEditTripViewModel"/>
    </data>

    <android.support.v4.widget.SwipeRefreshLayout

        android:id="@+id/refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:enabled="@{viewmodel.dataLoading}"
        app:refreshing="@{viewmodel.dataLoading}">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:visibility="@{viewmodel.dataLoading ? View.GONE : View.VISIBLE}">

                <EditText
                    android:id="@+id/add_task_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color1"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLines="1"
                    android:text="@={viewmodel.name}"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                <EditText
                    android:id="@+id/add_task_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorMain"
                    android:gravity="top"
                    android:hint="@string/body"
                    android:inputType="textCapSentences|textMultiLine"
                    android:text="@={viewmodel.body}" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/places_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:items="@{viewmodel.places}" />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_add_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="place"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/users_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:userAdapterItems="@{viewmodel.users}" />

                <EditText
                    android:id="@+id/input_add_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color1"
                    android:hint="@string/phone_or_email"
                    android:text="@={viewmodel.userToAdd}" />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button_add_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="user"
                    android:onClick="@{() -> viewmodel.addUser()}"/>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>
</layout>
